--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "pinia": "^2.1.7",
+    "unplugin-vue-components": "^0.25.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@iconify-json/solar": "^1.1.8",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.4.0",
+    "@vue/compiler-sfc": "^3.3.9",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
+    "unplugin-icons": "^0.18.0",
     "vite": "^4.4.11"
   }
 }
